# coco_games

./: README.md
coco_dice/: CMakeLists.txt  package.xml
coco_dice/config/: challenges.yaml
coco_dice/launch/: coco_say.launch.py
coco_dice/scripts/: body_landmarks.py  game_manager.py  pose_detector.py  speaker_node.py  yolo.py
coco_dice/src/: game_manager.cpp  pose_detector.cpp
coco_games/: CMakeLists.txt  package.xml
